app/assets/stylesheets/layouts/l-library.scss
.l-library {
  margin: 0 0 40px;

  .l-library-content-selector {
    display: flex;
    align-items: center;
    height: 33px;
    background: rgba($color-6, .1);

    > .wrapper {
      padding: 0;

      .row {
        width: 100%;
        margin: 0;
        overflow-x: scroll;
        -webkit-overflow-scrolling: touch;
      }

      .selectors-container {
        display: flex;
        width: auto;
        padding: 0 $wrapper-padding-mobile 3px $wrapper-padding-mobile; // 3px for te button's shadow

        @media #{$mq-tablet} {
          padding: 0 0 3px;
        }
      }

      @media #{$mq-tablet} {
        padding: 0 $wrapper-padding-tablet;
      }

      @media #{$mq-laptop} {
        padding: 0 $wrapper-padding-desktop;
      }

    }
  }

  .l-library-content-selector .content-selector {
    @extend .c-button;
    height: 48px;
    border: 0;
    background: transparent;

    color: $color-2;
    font-family: $font-family-2;
    font-weight: $font-weight-medium;

    cursor: pointer;

    &:hover {
      background-color: transparent;
      color: $color-2;
      opacity: 1;
    }

    &:not(:last-child) {
      margin: 0 25px 0 0;
    }

    &.-current {
      background: $color-4;
      color: $color-1;
      box-shadow: 0 2px 3px 0 rgba($color-6, .15);
    }
  }

  .l-subcategory-filter {
    margin: 40px 0 28px;
    text-align: center;

    @media #{$mq-tablet} {
      text-align: right;
    }

    .filter {
      padding: 0;

      color: rgba($color-5, .5);
      font-family: $font-family-1;
      font-size: $font-size-s;
      font-weight: $font-weight-bold;

      cursor: pointer;

      &.-applied {
        position: relative;
        color: $color-1;

        &::after {
          display: inline-block;
          position: absolute;
          bottom: -2px;
          left: 50%;
          width: 100%;
          height: 2px;
          transform: translate(-50%, 0);
          background: $color-1;
          content: '';
        }
      }
    }

    span {
      color: rgba($color-5, .5);
      font-family: $font-family-1;
      font-size: $font-size-s;
    }
  }

  .l-card-grid {
    margin: 30px 0 0;
  }
}

